[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "instrument-for-thought"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Instrument for Thought"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["instrument-for-thought"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
instrument-for-thought = "instrument_for_thought.cli:run"

[project.urls]
"Homepage" = "https://github.com/instrument-for-thought/instrument-for-thought"